<resources>
    <string name="app_name">Girafa Doces</string>

    <!-- Commons -->
    <string name="email">E-mail</string>
    <string name="password">Senha</string>
    <string name="send">ENVIAR</string>
    <string name="save">SALVAR</string>
    <string name="add_button">ADICIONAR</string>
    <string name="remove">REMOVER</string>
    <string name="information">INFORMAÇÕES</string>
    <string name="dialog_ok_button">Ok</string>
    <string name="dialog_cancel_button">Cancelar</string>
    <string name="dialog_yes_button">Sim</string>
    <string name="dialog_successful_title">SUCESSO</string>
    <string name="dialog_error_title">ERRO</string>
    <string name="dialog_confirmation_title">CONFIRMAR</string>
    <string name="type_here_hint">Escreva aqui</string>

    <!-- Common Error Messages -->
    <string name="unexpected_error_message">Ocorreu um erro inesperado. Por favor, tente denovo ou reinicie o aplicativo</string>
    <string name="server_error_message">Erro no servidor</string>
    <string name="empty_field_error_message">Por favor, preencha todos os campos</string>
    <string name="account_not_found_error_message">Conta não encontrada</string>

    <!-- General Result Messages -->
    <string name="permission_denied_message">Permissão negada</string>
    <string name="network_exception_message">Erro no processo devido a problemas de conexão</string>
    <string name="login_time_out_message">Não foi possível logar na conta por problemas de conexão</string>
    <string name="auth_invalid_user_message">Usuário e/ou senha inválidos</string>

    <!-- Login Activity -->
    <string name="keep_me_connected">Mantenha-me conectado</string>
    <string name="forgot_your_password">Esqueceu sua senha?</string>
    <string name="login">ENTRAR</string>
    <string name="register">CADASTRE-SE</string>
    <string name="sign_up">CADASTRAR</string>

    <!-- Orders Dialog -->
    <string name="orders">PEDIDOS</string>
    <string name="ordered_product">Produto pedido:</string>
    <string name="order_quantity">Quantidade:</string>
    <string name="order_address">Endereço:</string>
    <string name="client_details">DETALHES DO CLIENTE</string>
    <string name="client_observation">OBSERVAÇÃO DO CLIENTE</string>
    <string name="remove_order">REMOVER PEDIDO</string>

    <!-- Login Activity Result Messages -->
    <string name="login_error">Erro ao logar</string>
    <string name="reset_email_task_successful">E-mail para redefinição de senha enviado com sucesso!</string>
    <string name="reset_email_task_error">E-mail não encontrado</string>

    <!-- Forgot Password Dialog -->
    <string name="forgot_password_dialog_text">Insira o e-mail da conta que você esqueceu a senha:</string>

    <!-- Change Account Information Dialog -->
    <string name="change_email_header">Novo e-mail:</string>
    <string name="change_name_header">Novo nome:</string>
    <string name="change_delivery_address_header">Novo endereço:</string>
    <string name="change_phone_header">Novo número:</string>
    <string name="change_made_successfully">Alteração feita com sucesso</string>

    <!-- Sign Up Activity -->
    <string name="full_name">Nome completo</string>
    <string name="phone_number">Celular</string>
    <string name="phone_number_ddd">DDD</string>
    <string name="confirm_password">Confirmar senha</string>
    <string name="delivery_adress">Endereço de entrega</string>
    <string name="postal_number_char">Nº</string>

    <!-- Sign Up Activity Result Messages -->
    <string name="signup_success_message">Cadastro realizado com sucesso!</string>
    <string name="invalid_email_message">Formato de e-mail fornecido não é válido</string>
    <string name="invalid_phone_message">Número de telefone fornecido não é valido</string>
    <string name="email_already_registered_error_message">E-mail já cadastrado</string>
    <string name="weak_password_error_message">A senha precisa ter %1$d ou mais dígitos</string>
    <string name="password_confirm_match_error_message">Senhas não correspondem</string>

    <!-- Bottom Navigation Titles -->
    <string name="bottom_nav_menu">Menu</string>
    <string name="bottom_nav_account">Conta</string>
    <string name="bottom_nav_add">Add</string>
    <string name="bottom_nav_admin">Admin</string>

    <!-- Menu Fragment -->
    <string name="drag_sideways">&lt; ARRASTE PARA OS LADOS &gt;</string>
    <string name="order_confirmed_message">Pedido confirmado com sucesso!</string>

    <!-- Order Dialog -->
    <string name="enter_order_quantity">Deseja pedir quantos deste?</string>
    <string name="enter_order_observation">Se você tiver alguma observação, por favor, escreva abaixo:</string>
    <string name="confirm_order">CONFIRMAR PEDIDO</string>

    <!-- Account Fragment -->
    <string name="account_screen_title">SUA CONTA</string>
    <string name="account_address_header">Endereço:</string>
    <string name="account_name_header">Nome:</string>
    <string name="account_email_header">E-mail:</string>
    <string name="account_phone_header">Celular:</string>
    <string name="account_sign_out">SAIR DA CONTA</string>
    <string name="account_sign_out_dialog_message">Deseja sair da conta?</string>

    <!-- Add Fragment Result Messages -->
    <string name="menu_item_save_successful">Item adicionado com sucesso</string>

    <!-- Info Dialog Messages -->
    <string name="remove_menu_item_info">O item será removido para todos os usuários, deseja continuar?</string>

    <!-- Menu Item -->
    <string name="menu_item_description_hint">DESCRIÇÃO</string>
    <string name="menu_item_header_hint">NOME DO DOCE</string>
    <string name="menu_item_order_text">ENCOMENDAR</string>
    <string name="menu_item_remove_text">REMOVER</string>
    <string name="menu_item_choose_image">ESCOLHER IMAGEM</string>

    <!-- Administrator Panel -->
    <string name="administrator_item_header">ADMINISTRADOR:</string>
    <string name="administrator_you_item_header">ADMINISTRADOR (você):</string>
    <string name="enter_admin_email">Digite o e-mail do usuário:</string>
    <string name="administrators">ADMINISTRADORES</string>
    <string name="monitor_orders">VER PEDIDOS</string>

</resources>