<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryPink"
    tools:context=".presentation.login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/sign_up_full_name_edit_text"
            style="@style/SignUpEditText"
            android:layout_marginTop="20dp"
            android:hint="@string/full_name"
            android:inputType="textCapSentences"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/sign_up_email_edit_text"
            style="@style/SignUpEditText"
            android:layout_marginTop="20dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/sign_up_password_edit_text"
            style="@style/SignUpEditText"
            android:layout_marginTop="20dp"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/sign_up_confirm_password_edit_text"
            style="@style/SignUpEditText"
            android:layout_marginTop="20dp"
            android:hint="@string/confirm_password"
            android:importantForAutofill="no"
            android:inputType="textPassword" />

        <ViewFlipper
            android:id="@+id/sign_up_view_flipper"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginTop="35dp">

            <android.widget.Button
                android:id="@+id/sign_up_btn"
                android:layout_width="260dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:background="@drawable/sign_up_button_bg"
                android:text="@string/sign_up"
                android:textColor="@color/primaryPink"
                android:textSize="18sp" />

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:indeterminate="true"
                android:indeterminateDrawable="@drawable/progress_bar" />
        </ViewFlipper>

    </LinearLayout>

</RelativeLayout>