<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.login.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/primaryPink"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:src="@drawable/logo"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/login_logo"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/login_email_edit_text"
            style="@style/LoginEditText"
            android:layout_marginTop="20dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/login_password_edit_text"
            style="@style/LoginEditText"
            android:layout_marginTop="20dp"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword" />

        <ViewFlipper
            android:id="@+id/login_view_flipper"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="5dp">

            <android.widget.Button
                android:id="@+id/login_btn"
                android:layout_width="360dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:background="@drawable/login_button_bg"
                android:text="@string/login"
                android:textSize="18sp" />

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:indeterminate="true" />
        </ViewFlipper>

        <TextView
            android:id="@+id/login_forgot_password_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/forgot_your_password"
            android:textColor="@color/primaryPink"
            android:textSize="18sp" />

        <android.widget.Button
            android:id="@+id/login_sign_up_btn"
            android:layout_width="260dp"
            android:layout_height="48dp"
            android:layout_marginTop="45dp"
            android:background="@drawable/login_button_bg"
            android:text="@string/register"
            android:textSize="18sp" />

    </LinearLayout>

</RelativeLayout>