<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryPink"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="30dp"
        android:gravity="center"
        android:text="@string/forgot_password_dialog_text"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/forgot_password_dialog_email_et"
        style="@style/LoginEditTextNoPadding"
        android:textColorHint="@color/beige"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        tools:ignore="TextFields" />

    <ViewFlipper
        android:id="@+id/forgot_password_dialog_view_flipper"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="15dp">

        <Button
            android:id="@+id/forgot_password_send_btn"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/sign_up_button_bg"
            android:maxLines="1"
            android:text="@string/send"
            android:textColor="@color/primaryPink"
            android:textSize="17sp"
            app:backgroundTint="@color/white" />

        <ProgressBar
            android:id="@+id/forgot_password_progress_bar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:indeterminateDrawable="@drawable/progress_bar_white" />

    </ViewFlipper>

</LinearLayout>