<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primaryPink"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/time_ordered_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primaryPink"
            android:gravity="center"
            android:maxLines="1"
            android:padding="6dp"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:autoSizeMaxTextSize="24sp"
            app:autoSizeMinTextSize="1sp"
            app:autoSizeTextType="uniform"
            tools:text="00/00/0000 as 00:00" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:paddingBottom="10dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white"
                android:paddingStart="10dp"
                android:paddingEnd="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/ordered_product"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ordered_product_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="18sp"
                tools:text="Bolo de chocolate" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/order_quantity"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/order_quantity_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="18sp"
                tools:text="2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/order_address"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/order_address_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="10"
                android:textColor="@color/white"
                android:textSize="18sp"
                tools:text="Rua Aleatória nº 198" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="1dp"
            android:paddingEnd="1dp"
            android:paddingBottom="1dp">

            <LinearLayout
                android:id="@+id/observation_button_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/client_observation_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:text="@string/client_observation"
                    android:textColor="@color/primaryPink" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/primaryPink"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp" />

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/client_details_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:text="@string/client_details"
                android:textColor="@color/primaryPink" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/primaryPink"
                android:paddingStart="10dp"
                android:paddingEnd="10dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/remove_order_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:text="@string/remove_order"
                android:textColor="@color/primaryPink" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>