<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/primaryPink"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:minWidth="400dp"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/account_name_header"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:autoSizeMaxTextSize="22sp"
        app:autoSizeMinTextSize="20sp"
        app:autoSizeTextType="uniform" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbarStyle="insideInset">

        <TextView
            android:id="@+id/admin_info_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:ellipsize="marquee"
            tools:text="Lorem Ipsum Lorem Ipsum Lorem"
            android:textColor="@color/white"
            android:textSize="22sp" />

    </HorizontalScrollView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:layout_marginTop="18dp"
        android:maxLines="1"
        android:text="@string/account_email_header"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:autoSizeMaxTextSize="22sp"
        app:autoSizeMinTextSize="20sp"
        app:autoSizeTextType="uniform" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbarStyle="insideInset">

        <TextView
            android:id="@+id/admin_info_email_address_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:ellipsize="marquee"
            tools:text="Lorem Ipsum Lorem Ipsum Lorem"
            android:textColor="@color/white"
            android:textSize="22sp" />

    </HorizontalScrollView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:layout_marginTop="18dp"
        android:maxLines="1"
        android:text="@string/account_address_header"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:autoSizeMaxTextSize="22sp"
        app:autoSizeMinTextSize="20sp"
        app:autoSizeTextType="uniform" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbarStyle="insideInset">

        <TextView
            android:id="@+id/admin_info_delivery_address_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:ellipsize="marquee"
            tools:text="Lorem Ipsum Lorem Ipsum Lorem"
            android:textColor="@color/white"
            android:textSize="22sp" />

    </HorizontalScrollView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:layout_marginTop="18dp"
        android:maxLines="1"
        android:text="@string/account_phone_header"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:autoSizeMaxTextSize="22sp"
        app:autoSizeMinTextSize="20sp"
        app:autoSizeTextType="uniform" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbarStyle="insideInset">

        <TextView
            android:id="@+id/admin_info_phone_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:ellipsize="marquee"
            tools:text="Lorem Ipsum Lorem Ipsum Lorem"
            android:textColor="@color/white"
            android:textSize="22sp" />

    </HorizontalScrollView>

</LinearLayout>