<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/primaryPink"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:minWidth="350dp"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/enter_admin_email"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:autoSizeMaxTextSize="22sp"
        app:autoSizeMinTextSize="20sp"
        app:autoSizeTextType="uniform" />

    <EditText
        android:id="@+id/add_admin_email_edit_text"
        android:layout_width="match_parent"
        android:layout_height="@dimen/EditTextHeight"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_rounded_white_bg"
        android:gravity="center"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColor="@color/white"
        android:textCursorDrawable="@null"
        android:textSize="22sp"
        app:autoSizeMaxTextSize="22sp"
        app:autoSizeMinTextSize="17sp"
        app:autoSizeTextType="uniform" />

    <TextView
        android:id="@+id/add_admin_info_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:ellipsize="end"
        android:maxLines="3"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:visibility="gone"
        app:autoSizeMaxTextSize="17sp"
        app:autoSizeMinTextSize="14sp"
        app:autoSizeTextType="uniform"
        tools:text="Formato incorreto!" />

    <ViewFlipper
        android:id="@+id/add_admin_view_flipper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/add_admin_btn_cv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="20dp"
            app:cardElevation="0dp"
            app:contentPaddingBottom="10dp"
            app:contentPaddingLeft="30dp"
            app:contentPaddingRight="30dp"
            app:contentPaddingTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_button"
                android:textColor="@color/primaryPink"
                android:textSize="21sp" />

        </androidx.cardview.widget.CardView>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:indeterminateDrawable="@drawable/progress_bar_white" />

    </ViewFlipper>

</LinearLayout>