<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/primaryPink"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:minWidth="400dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingTop="20dp"
        android:paddingEnd="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:text="@string/enter_order_quantity"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="22dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/order_dialog_left_arrow_iv"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:clickable="true"
                android:focusable="true"
                android:scaleX="1.7"
                android:scaleY="1.7"
                android:src="@drawable/ic_baseline_arrow_left_24"
                app:tint="@color/white" />

            <TextView
                android:id="@+id/order_dialog_amount_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColor="@color/primaryPink"
                android:textSize="34sp"
                android:textStyle="bold"
                tools:text="1" />

            <ImageView
                android:id="@+id/order_dialog_right_arrow_iv"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:clickable="true"
                android:focusable="true"
                android:scaleX="1.7"
                android:scaleY="1.7"
                android:src="@drawable/ic_baseline_arrow_right_24"
                app:tint="@color/white" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:ellipsize="end"
            android:text="@string/enter_order_observation"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:orientation="horizontal"
            android:padding="12dp">

            <EditText
                android:id="@+id/observation_et"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@color/transparent"
                android:gravity="start"
                android:hint="@string/type_here_hint"
                android:inputType="textMultiLine|textCapSentences"
                android:maxLines="4"
                android:textColor="@color/primaryPink"
                android:textColorHint="@color/pinkHintColor" />

        </LinearLayout>

    </LinearLayout>

    <ViewFlipper
        android:id="@+id/confirm_order_view_flipper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/confirm_order_btn_cv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="@color/white"
            app:cardElevation="0dp"
            app:contentPaddingBottom="17dp"
            app:contentPaddingLeft="25dp"
            app:contentPaddingRight="25dp"
            app:contentPaddingTop="17dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/confirm_order"
                android:textColor="@color/primaryPink"
                android:textSize="20sp" />

        </androidx.cardview.widget.CardView>

        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:indeterminate="true"
            android:indeterminateDrawable="@drawable/progress_bar_pink"
            android:padding="5dp" />

    </ViewFlipper>

</LinearLayout>